<resources>
    <string name="app_name">NavigationProject</string>
    <string name="login_email_input_hint">Ingresa tu correo</string>
    <string name="login_title_text">Laboratorio 7</string>
    <string name="login_button_text">Iniciar Sesión</string>
    <string name="create_user_buttonText">¿Nuevo usuario? Crea tu cuenta aquí</string>
    <string name="create_new_account_button">Crear cuenta</string>
    <string name="create_account_fr_title">Nueva cuenta</string>
    <string name="update_profile_button_text">Actualizar Perfil</string>
    <string name="hello_email">Hola @correo, necesitamos que actualices tu perfil</string>
    <string name="good_morning">¡Buenos Días!</string>
    <string name="login_graph_label">Login</string>
    <string name="new_account_label">New Account</string>
    <string name="home_label">Home</string>
    <string name="profile_graph_label">Profile</string>
    <string name="update_button_text">Actualizar</string>
    <string name="my_profil_title">Mi perfil</string>
</resources>