<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/login_fragment_layout"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".LoginFragment">
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_login_InputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/login_title_textView"
        app:layout_constraintBottom_toTopOf="@id/create_account_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/login_email_input_hint"
        android:layout_marginHorizontal="32dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/login_title_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/text_login_InputLayout"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/login_title_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textStyle="bold"
        android:textSize="@dimen/titles_size"
        android:layout_marginBottom="24dp"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/create_account_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_user_buttonText"
        app:layout_constraintBottom_toTopOf="@id/login_button"
        app:layout_constraintTop_toBottomOf="@id/text_login_InputLayout"
        app:layout_constraintStart_toStartOf="@id/text_login_InputLayout"
        android:textSize="11sp"
        android:textAllCaps="false"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginTop="5dp"
        android:textColor="@color/teal_200"/>

    <Button
        android:id="@+id/login_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/create_account_button"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginHorizontal="@dimen/horizontal_padding"
        android:text="@string/login_button_text"
        android:textAllCaps="false"
        android:layout_marginTop="16dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>