<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".HomeFragment">

    <TextView
        android:id="@+id/loged_in_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/loged_in_desc"
        app:layout_constraintVertical_chainStyle="packed"
        android:text="@string/good_morning"
        android:textSize="@dimen/titles_size"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/loged_in_desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/loged_in_title"
        app:layout_constraintBottom_toTopOf="@id/update_profile_button"
        app:layout_constraintStart_toStartOf="@id/update_profile_button"
        app:layout_constraintEnd_toEndOf="@id/update_profile_button"
        android:text="@string/hello_email"
        android:layout_marginTop="12dp"
        android:textAlignment="center"
        />
    <Button
        android:id="@+id/update_profile_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loged_in_desc"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginHorizontal="@dimen/horizontal_padding"
        android:text="@string/update_profile_button_text"
        android:textAllCaps="false"
        android:layout_marginTop="8dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>