<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/new_account_fragment_layout"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".NewAccountFragment">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_account_fr_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textStyle="bold"
        android:textSize="@dimen/titles_size"
        android:layout_marginTop="34dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_login_InputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/login_email_input_hint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/create_new_account_button"
        android:layout_marginHorizontal="@dimen/horizontal_padding"
        app:layout_constraintVertical_chainStyle="packed"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/create_new_account_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/text_login_InputLayout"
        app:layout_constraintStart_toStartOf="@id/text_login_InputLayout"
        app:layout_constraintEnd_toEndOf="@id/text_login_InputLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/create_new_account_button"
        android:textAllCaps="false"
        android:layout_marginTop="8dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>